# agent-kit

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: smesh-release.yml
apps/cli-rust/: Cargo.toml  README.md
apps/cli-rust/docs/: agent-usage.md
apps/cli-rust/examples/: openclaw-codex-capture-note.sh
apps/cli-rust/src/: lib.rs  main.rs
apps/cli-rust/tests/: cli.rs
docs/: agent-setup.md  install-ea-skill.md  install-smesh.md
releases/smesh/: latest.json
releases/smesh/latest/: linux-x64.sha256
scripts/: install_smesh.sh  package_smesh_distribution.py
skills/scientiamesh-ea/: SKILL.md  skill.json
skills/scientiamesh-ea/references/: assertion-workflows.md  fallbacks-before-ea-tools.md  human-ea-judgment.md  memory-contract.md  operating-playbooks.md  preference-taxonomy.md  scientiamesh-ea-tool-contract.md  workflows.md
skills/scientiamesh-ea/scripts/: smesh_ea_status.py
tests/golden/agent_crud/: project_archive_confirmation_required.json  project_assertion_attach_merge.json  project_assertion_confirm.json  project_assertion_delegate.json  project_assertion_deny.json  project_assertions_list.json  project_create.json  task_assertion_attach_project.json  task_assertion_confirm.json  task_assertion_delegate.json  task_assertion_deny.json  task_assertion_merge.json  task_assertions_list.json
