[workspace]
members = ["apps/cli-rust"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ScientiaMesh/scientiamesh"

[workspace.dependencies]
clap = "4.5"
getrandom = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
