[package]
name = "smesh-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust command line interface for ScientiaMesh"
readme = "README.md"

[[bin]]
name = "smesh"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
